--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ optional = true
 
 [dev-dependencies]
 tempfile = "3.3.0"
-bytes = "1.2.1"
+bytes = { version = "1.2.1", features = ["serde"] }
 num-derive = "0.3.3"
 num-traits = "0.2.15"
 thiserror = "1.0.37"
