--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ default = ["serde"]
 
 [dependencies]
 codespan-reporting = "0.11.1"
+heck = "0.4.0"
 pest = "2.4.0"
 pest_derive = "2.4.0"
 proc-macro2 = "1.0.46"
