--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ quote = "1.0.21"
 serde_json = "1.0.86"
 argh = "0.1.7"
 syn = "1.0.102"
+prettyplease = "0.1.25"
 
 [dependencies.serde]
 version = "1.0.145"
