Link back to AOSP rustfmt.toml

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,8 +1,7 @@
 # Android Format Style
 #
-# Note that this is not a symlink back to soong/scripts/rustfmt.toml
-# since the ChromeOS team imports this repository. See
-# https://r.android.com/1998210 for details.
+# Copied from Android:
+# https://cs.android.com/android/platform/superproject/+/master:packages/modules/Bluetooth/rustfmt.toml.
 
 edition = "2021"
 use_small_heuristics = "Max"
