--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,11 @@
 name: build
 
 on:
-  - pull_request
-  - push
-  - workflow_dispatch
-
+  pull_request:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 env:
   CARGO_TERM_COLOR: always
   FORCE_COLOR: 3
