Add syntax file for sublime text

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ authors = [
     "David de Jesus Duarte <licorne@google.com>",
     "Martin Geisler <mgeisler@google.com>"
 ]
-exclude = [".github/*"]
+exclude = [".github/*", "editors/*"]
 categories = ["parsing"]
 default-run = "pdlc"
 
