Use standard 'license' header in Cargo.toml
license-file is recommanded for non-standard licenses only

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.3"
 edition = "2021"
 description = "Parser and serializer generator for protocol binary packets"
 repository = "https://github.com/google/pdl/"
-license-file = "LICENSE"
+license = "Apache-2.0"
 readme = "README.md"
 keywords = ["pdl", "parser", "serializer", "grammar"]
 authors = [
