--- a/pdl-derive/Cargo.toml
+++ b/pdl-derive/Cargo.toml
@@ -26,3 +26,7 @@ proc-macro2 = "1.0.66"
 quote = "1.0.33"
 syn = {version = "2.0.29", features = ["full"]}
 termcolor = "1.2.0"
+
+[dev-dependencies]
+bytes = "1.4.0"
+thiserror = "1.0.47"
