--- a/pdl-derive/Cargo.toml
+++ b/pdl-derive/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "pdl-derive"
-version = "0.1.6"
+version = "0.1.7"
 edition = "2021"
-description = "Parser and serializer generator for protocol binary packets"
+description = "PDL's derive macro"
 repository = "https://github.com/google/pdl/"
 license = "Apache-2.0"
 readme = "../README.md"
@@ -21,7 +21,7 @@ proc-macro = true
 
 [dependencies]
 codespan-reporting = "0.11.1"
-pdl-compiler = {path = "../pdl-compiler", version = "0.1.6"}
+pdl-compiler = {path = "../pdl-compiler", version = "0.1.7"}
 proc-macro2 = "1.0.66"
 quote = "1.0.33"
 syn = {version = "2.0.29", features = ["full"]}
