--- a/upack/Cargo.toml
+++ b/upack/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default = ["std", "unsafe"]
+default = ["std", "infallible"]
 std = ["alloc"]
 alloc = []
-unsafe = []
+infallible = []
+
+[dependencies]
+cfg-if = "1.0.0"
 
 [dev-dependencies]
 rand = "0.8.5"
