--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,6 +88,9 @@ jobs:
       - name: Install pdlc
         run: cargo install --path pdl-compiler/
 
+      - name: Run Rust generator tests
+        run: pdl-compiler/tests/run_rust_generator_tests.sh
+
       - name: Run CXX generator tests
         run: pdl-compiler/tests/run_cxx_generator_tests.sh
 
