Define 'serde' cfg feature for generated modules

--- a/pdl-derive/Cargo.toml
+++ b/pdl-derive/Cargo.toml
@@ -15,6 +15,9 @@ authors = [
 exclude = ["editors/*"]
 categories = ["parsing"]
 
+[features]
+serde = []
+
 [lib]
 name = "pdl_derive"
 proc-macro = true
