--- a/pdl-compiler/Cargo.toml
+++ b/pdl-compiler/Cargo.toml
@@ -10,7 +10,8 @@ keywords = ["pdl", "parser", "serializer", "grammar"]
 authors = [
     "Henri Chataing <henrichataing@google.com>",
     "David de Jesus Duarte <licorne@google.com>",
-    "Martin Geisler <mgeisler@google.com>"
+    "Martin Geisler <mgeisler@google.com>",
+    "James Eidson <jmes@google.com>",
 ]
 exclude = ["editors/*"]
 categories = ["parsing"]
@@ -22,6 +23,7 @@ path = "src/main.rs"
 
 [features]
 default = ["serde"]
+java = ["dep:genco"]
 
 [dependencies]
 codespan-reporting = "0.11.1"
@@ -34,6 +36,8 @@ serde_json = "1.0.94"
 argh = "0.1.12"
 syn = "2.0.58"
 prettyplease = "0.2.17"
+once_cell = "1.21.3"
+genco = { version = "0.17.10", optional = true }
 
 [dependencies.serde]
 version = "1.0.145"
