--- a/pdl-compiler/Cargo.toml
+++ b/pdl-compiler/Cargo.toml
@@ -23,7 +23,7 @@ path = "src/main.rs"
 
 [features]
 default = ["serde"]
-java = ["dep:genco"]
+java = ["genco", "once_cell"]
 
 [dependencies]
 codespan-reporting = "0.11.1"
@@ -36,7 +36,7 @@ serde_json = "1.0.94"
 argh = "0.1.12"
 syn = "2.0.58"
 prettyplease = "0.2.17"
-once_cell = "1.21.3"
+once_cell = { version = "1.21.3", optional = true }
 genco = { version = "0.17.10", optional = true }
 
 [dependencies.serde]
