Set the rust version at 1.83 for the Clippy rule

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,6 +60,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Install 1.83.0 Rust
+        run: |
+          rustup default 1.83.0
+          rustup component add clippy
+
       - name: Setup Rust cache
         uses: Swatinem/rust-cache@v2
 
