--- a/pdl-derive/Cargo.toml
+++ b/pdl-derive/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "pdl-derive"
 version = "0.4.4"
-edition = "2021"
+edition = "2024"
+rust-version = "1.87"
 description = "PDL's derive macro"
 repository = "https://github.com/google/pdl/"
 license = "Apache-2.0"
